[package]
name = "zipfer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.4", features = ["derive"] }
clap-verbosity-flag = "2.0.1"
anyhow = "1.0.70"
log = "0.4.17"
env_logger = "0.10.0"
indicatif = "0.17.3"

[dev-dependencies]
assert_cmd = "2.0.8"
predicates = "2.1.5"
assert_fs = "1.0.10"
